# vibing-linux

./: .coverage  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Vibing.spec  install.sh  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: python-imports.instructions.md
.github/workflows/: ci.yml  release.yml
packaging/: build-deb.sh  build-macos.sh  nfpm.yaml  vibing-linux_0.1.0_amd64.deb
packaging/assets/: vibing-linux-autostart.desktop  vibing-linux.desktop
packaging/scripts/: postinst  postrm  prerm
tests/: conftest.py
tests/integration/: test_config_file.py  test_pipeline.py
tests/unit/: test_app.py  test_audio.py  test_clipboard.py  test_config.py  test_tray.py
tests/unit/providers/: test_asr.py  test_factories.py  test_llm.py
vibing/: __init__.py  __main__.py  app.py  asr.py  audio.py  clipboard.py  config.py  configure.py  hotkey.py  llm.py  logging.py  setup.py  tray.py
vibing/platform/: base.py  loader.py  overlay.py
vibing/platform/linux/: clipboard.py  factory.py  hotkey.py  system.py  tray.py
vibing/platform/macos/: __init__.py  clipboard.py  factory.py  hotkey.py  overlay.py  system.py  tray.py
vibing/providers/: __init__.py
vibing/providers/asr/: __init__.py  base.py  faster_whisper.py  openai_whisper.py
vibing/providers/llm/: anthropic.py  base.py  llama_cpp.py  openai.py
